css/notes.css
.note {
  height: 300px;
  max-height: 300px;
  width: 450px;
  max-width: 450px;
}

.left-panel {
  height: 85vh;
  width: 200px;
  padding: 0;
  overflow: auto;
}

.saved-note {
  background-color: #333333;
  height: 100px;
  width: 96%;
  margin: 2%;
}

.saved-note:hover {
  background-color: #111111;
}

.hidden {
  display: none;
}

.left-panel::-webkit-scrollbar-track
{
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  border-radius: 10px;
  background-color: #F5F5F5;
}

.left-panel::-webkit-scrollbar
{
  width: 12px;
  background-color: #F5F5F5;
}

.left-panel::-webkit-scrollbar-thumb
{
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
  background-color: #111111;
}

